syntax = "proto3";

package hft.common;

option go_package = "github.com/yourusername/hft-poc/pkg/proto/common";

// 交易所枚举
enum Exchange {
  UNKNOWN_EXCHANGE = 0;
  SHFE = 1;   // 上海期货交易所
  DCE = 2;    // 大连商品交易所
  CZCE = 3;   // 郑州商品交易所
  CFFEX = 4;  // 中国金融期货交易所
  INE = 5;    // 上海国际能源交易中心
  GFEX = 6;   // 广州期货交易所
}

// 通用响应
message Empty {}

// 健康检查
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }

  ServingStatus status = 1;
  string message = 2;
  uint64 uptime_seconds = 3;
  map<string, string> metrics = 4;
}

// 健康检查服务
service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}
